--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
       <!-- Game 4 -->
       <div class="col-md-4">
-        <a href="#"><div class="game-tile" style="background-image: url('tetris.jpg');"></div></a>
+        <a href="#"><div class="game-tile" style="background-image: url('tetris2.jpg');"></div></a>
         <p class="text-left mt-2 fw-semibold text-white">Gavin Sinnott</p>
       </div>
 
