--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
       <!-- Game 4 -->
       <div class="col-md-4">
-        <a href="#"><div class="game-tile" style="background-image: url('tetris2.JPG');"></div></a>
+        <a href="#"><div class="game-tile" style="background-image: url('tetris22.png');"></div></a>
         <p class="text-left mt-2 fw-semibold text-white">Gavin Sinnott</p>
       </div>
 
@@ -78,4 +78,3 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
-
