--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <meta property="og:description" content="Explore AI-powered games created by our talented students." />
 <meta property="og:image" content="games.jpg" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="www.Carlowinstitute.ie" />
+<meta property="og:url" content="https://cifet.github.io/Student-Games/" />
 
 
 <meta name="twitter:card" content="Student AI Games" />
