--- a/index.html
+++ b/index.html
@@ -69,19 +69,19 @@
 
       <!-- Game 6 -->
       <div class="col-md-4">
-        <a href="knife.html">  <div class="game-tile" style="background-image: url('knife.png');"></div></a>
+        <a href="knife.html" target="_blank">  <div class="game-tile" style="background-image: url('knife.png');"></div></a>
         <p class="text-left mt-2 fw-semibold text-white">Andrii</p>
       </div>
 
       <!-- Game 7 -->
       <div class="col-md-4">
-        <a href="casinoslots.html"><div class="game-tile" style="background-image: url('fruit.png');"></div></a>
+        <a href="casinoslots.html" target="_blank"><div class="game-tile" style="background-image: url('fruit.png');"></div></a>
         <p class="text-left mt-2 fw-semibold text-white">Olsekandr</p>
       </div>
 
       <!-- Game 8 -->
       <div class="col-md-4">
-        <a href="#"><div class="game-tile" style="background-image: url('rouge.png');"></div></a>
+        <a href="cursedrogue.html" target="_blank"><div class="game-tile" style="background-image: url('rouge.png');"></div></a>
         <p class="text-left mt-2 fw-semibold text-white">Jay Gunning</p>
       </div>
 
