--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
       <!-- Game 8 -->
       <div class="col-md-4">
-        <a href="cursedrogue.html" target="_blank"><div class="game-tile" style="background-image: url('rouge.png');"></div></a>
+        <a href="cursedrogue.html" target="_blank"><div class="game-tile" style="background-image: url('rouge1.png');"></div></a>
         <p class="text-left mt-2 fw-semibold text-white">Jay Gunning</p>
       </div>
 
