--- a/index.html
+++ b/index.html
@@ -39,31 +39,31 @@
     <div class="row g-4">
       <!-- Game 1 -->
       <div class="col-md-4">
-        <a href="#"><div class="game-tile" style="background-image: url('blackjack.jpg');"></div></a>
+        <a href="blackjack.html" target="_blank"><div class="game-tile" style="background-image: url('blackjack.jpg');"></div></a>
         <p class="text-left mt-2 fw-semibold text-white">Gavin Sinnott</p>
       </div>
 
       <!-- Game 2 -->
       <div class="col-md-4">
-        <a href="#"><div class="game-tile" style="background-image: url('mine.jpeg');"></div></a>
+        <a href="minesweeper.html" target="_blank"><div class="game-tile" style="background-image: url('mine.jpeg');"></div></a>
         <p class="text-left mt-2 fw-semibold text-white">Keanan Treacy</p>
       </div>
 
       <!-- Game 3 -->
       <div class="col-md-4">
-        <a href="#"><div class="game-tile" style="background-image: url('space.png');"></div></a>
+        <a href="space.html" target="_blank"><div class="game-tile" style="background-image: url('space.png');"></div></a>
         <p class="text-left mt-2 fw-semibold text-white">Keanan Treacy</p>
       </div>
 
       <!-- Game 4 -->
       <div class="col-md-4">
-        <a href="#"><div class="game-tile" style="background-image: url('tetris22.png');"></div></a>
+        <a href="tetris.html" target="_blank"><div class="game-tile" style="background-image: url('tetris22.png');"></div></a>
         <p class="text-left mt-2 fw-semibold text-white">Gavin Sinnott</p>
       </div>
 
       <!-- Game 5 -->
       <div class="col-md-4">
-        <a href="#"><div class="game-tile" style="background-image: url('snake.jpeg');"></div></a>
+        <a href="snake.html" target="_blank"><div class="game-tile" style="background-image: url('snake.jpeg');"></div></a>
         <p class="text-left mt-2 fw-semibold text-white">Student Name 5</p>
       </div>
 
@@ -87,8 +87,8 @@
 
       <!-- Game 9 -->
       <div class="col-md-4">
-        <a href="#"><div class="game-tile" style="background-image: url('space.png');"></div></a>
-        <p class="text-left mt-2 fw-semibold text-white">Keanan Treacy</p>
+        <a href="ridethebus.html" target="_blank"><div class="game-tile" style="background-image: url('space.png');"></div></a>
+        <p class="text-left mt-2 fw-semibold text-white">Gavin Sinnott</p>
       </div>
 
     </div>
