--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <div class="row g-4">
       <!-- Game 1 -->
       <div class="col-md-4">
-        <a href="blackjack.html" target="_blank"><div class="game-tile" style="background-image: url('blackjack.jpg');"></div></a>
+        <a href="blackJack.html" target="_blank"><div class="game-tile" style="background-image: url('blackjack.jpg');"></div></a>
         <p class="text-left mt-2 fw-semibold text-white">Gavin Sinnott</p>
       </div>
 
@@ -97,3 +97,4 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
