--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
       <!-- Game 5 -->
       <div class="col-md-4">
-        <a href="snake.html" target="_blank"><div class="game-tile" style="background-image: url('snake.jpeg');"></div></a>
+        <a href="https://keithryan28.github.io/new-pages-site/snake.html" target="_blank"><div class="game-tile" style="background-image: url('snake.jpeg');"></div></a>
         <p class="text-left mt-2 fw-semibold text-white">Student Name 5</p>
       </div>
 
@@ -97,4 +97,5 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
