--- a/index.html
+++ b/index.html
@@ -64,19 +64,19 @@
       <!-- Game 5 -->
       <div class="col-md-4">
         <a href="https://keithryan28.github.io/new-pages-site/snake.html" target="_blank"><div class="game-tile" style="background-image: url('snake.jpeg');"></div></a>
-        <p class="text-left mt-2 fw-semibold text-white">Student Name 5</p>
+        <p class="text-left mt-2 fw-semibold text-white">K Ryan</p>
       </div>
 
       <!-- Game 6 -->
       <div class="col-md-4">
         <a href="knife.html" target="_blank">  <div class="game-tile" style="background-image: url('knife.png');"></div></a>
-        <p class="text-left mt-2 fw-semibold text-white">Andrii</p>
+        <p class="text-left mt-2 fw-semibold text-white">Andrii Markov</p>
       </div>
 
       <!-- Game 7 -->
       <div class="col-md-4">
         <a href="casinoslots.html" target="_blank"><div class="game-tile" style="background-image: url('fruit.png');"></div></a>
-        <p class="text-left mt-2 fw-semibold text-white">Olsekandr</p>
+        <p class="text-left mt-2 fw-semibold text-white">Oleksandr Ponomarenko</p>
       </div>
 
       <!-- Game 8 -->
@@ -87,7 +87,7 @@
 
       <!-- Game 9 -->
       <div class="col-md-4">
-        <a href="ridethebus.html" target="_blank"><div class="game-tile" style="background-image: url('space.png');"></div></a>
+        <a href="ridethebus.html" target="_blank"><div class="game-tile" style="background-image: url('cards.png');"></div></a>
         <p class="text-left mt-2 fw-semibold text-white">Gavin Sinnott</p>
       </div>
 
